# olive

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  fib.liv  hello.liv  install.sh  mir_output.txt  mir_output_new.txt
.github/workflows/: release.yml
docs/: async.md  basics.md  classes.md  enums.md  error_handling.md  ffi.md  functions.md  generics.md  getting_started.md  index.md  internals.md  introduction.md  modules.md  optimizations.md  ownership.md  structs.md  traits.md
lib/: aio.liv  bytes.liv  compress.liv  crypto.liv  datetime.liv  encoding.liv  http.liv  io.liv  json.liv  logging.liv  math.liv  net.liv  os.liv  random.liv  reflect.liv  regex.liv  requests.liv  result.liv  string.liv  sys.liv  time.liv  uuid.liv  websocket.liv  ws.liv  yaml.liv
src/: compile.rs  fmt.rs  main.rs  mangle.rs  packages.rs  pods.rs  publish.rs  registry.rs  repl.rs  span.rs  token.rs  upgrade.rs
src/borrow_check/: checker.rs  debug_test.rs  mod.rs
src/codegen/: cranelift.rs
src/codegen/cranelift/: async_sm.rs  imports.rs  mod.rs  setup.rs  tests.rs  translate.rs  translate_rvalue.rs
src/compile/: errors.rs  linker.rs  loader.rs  mod.rs  pipeline.rs
src/lexer/: engine.rs  error.rs  lexer.rs  mod.rs  token.rs
src/mir/: builder.rs  ir.rs  liveness.rs  loop_utils.rs  mod.rs  optimizer.rs
src/mir/builder/: generics.rs  lower_control.rs  lower_expr.rs  lower_pattern.rs  lower_stmt.rs  mod.rs
src/mir/optimizations/: algebraic.rs  const_fold.rs  const_prop.rs  copy_prop.rs  cse.rs  dce.rs  gvn.rs  inliner.rs  licm.rs  loop_unroll.rs  mod.rs  move_elision.rs  peephole.rs  simplify_cfg.rs  strength_reduction.rs  tail_call.rs  vectorize.rs
src/parser/: ast.rs  base.rs  decls.rs  engine.rs  error.rs  expr.rs  ffi.rs  mod.rs  stmt.rs  tests.rs  types.rs
src/semantic/: error.rs  mod.rs  resolver.rs  symbol_table.rs  type_checker.rs  types.rs
src/semantic/type_checker/: expr.rs  mod.rs  patterns.rs  stmt.rs  unify.rs
std_lib/: Cargo.toml
std_lib/src/: aio.rs  bytes.rs  compress.rs  crypto.rs  datetime.rs  encoding.rs  http.rs  io.rs  json.rs  lib.rs  logging.rs  math.rs  net.rs  os.rs  random.rs  regex.rs  requests.rs  result.rs  sys.rs  uuid.rs  websocket.rs  ws.rs  yaml.rs
tests/: generics.ol  generics_init.ol
