[workspace]
members = ["std_lib"]

[package]
name = "pit"
version = "0.1.0"
edition = "2024"
authors = ["ecnivs"]
description = "The Olive programming language compiler"
license = "MIT"
repository = "https://github.com/ecnivs/olive"
keywords = ["compiler", "language", "olive"]
categories = ["compilers"]


[dependencies]
ariadne = "0.6.0"
clap = { version = "4.6.1", features = ["derive"] }
cranelift = "0.131.1"
cranelift-frontend = "0.131.1"
cranelift-jit = "0.131.1"
cranelift-module = "0.131.1"
cranelift-native = "0.131.1"
cranelift-object = "0.131.1"
libloading = "0.9.0"
rand = "0.10.1"
rustc-hash = "2.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
rustyline = { version = "14.0", default-features = false }
ureq = { version = "2", features = ["json"] }
blake3 = "1"
tar = "0.4"
zstd = "0.13"
dirs = "5"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
