[package]
name = "olive_std"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
rustc-hash = "2.1.2"
ureq = "2.12"
mimalloc = "0.1"
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
flate2 = "1"
zstd = "0.13"
aes-gcm = "0.10"
argon2 = "0.5"
rsa = "0.9"
libc = "0.2"
tungstenite = { version = "0.23", features = ["native-tls"] }
serde_yaml = "0.9"
toml = "0.8"
unicode-segmentation = "1"
libffi = "5.1.0"
